fix: fix ui overlap issue

--- a/src/features/user/MFV2/CommunityContributions/communityContributions.module.scss
+++ b/src/features/user/MFV2/CommunityContributions/communityContributions.module.scss
@@ -8,7 +8,6 @@
 
 }
 .header {
-    // min-height: 120px;
     border: 5px solid #fff;
     border-radius: 24px 24px 0 0;
     border-bottom: 0px;
@@ -142,6 +141,7 @@
     }
     .headerItems {
         justify-content: center;
+        margin-top: 0px;
 
         .headerTitle {
             text-align: center;
